
CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
CMAKE_POLICY(SET CMP0007 NEW)

SET(LIBRARY_NAME    cryptolib)

PROJECT(${LIBRARY_NAME} C)

SET(PROJECT_DESCRIPTION     "Cryptography libraries repacked for convenience from AVR Crypto Lib")
SET(PROJECT_AUTHOR_NAME     "Chintalagiri Shashank")
SET(PROJECT_AUTHOR_EMAIL    "shashank.chintalagiri@gmail.com")
SET(PROJECT_LICENSE         "GPLv3")
SET(PROJECT_VERSION_MAJOR   1)
SET(PROJECT_VERSION_MINOR   1)
SET(PROJECT_VERSION_PATCH   0)
SET(PROJECT_VERSION_TWEAK   0)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(SET CMP0007 NEW)

FALLBACK_DEFAULT(USE_ASM_IF_AVAILABLE   1)

INCLUDE(ebs/lib-conf)

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(gf256mul)
ADD_SUBDIRECTORY(md5)
ADD_SUBDIRECTORY(sha1)
ADD_SUBDIRECTORY(sha256)
ADD_SUBDIRECTORY(aes)
ADD_SUBDIRECTORY(entropium)

ADD_PLATFORM_LIBRARY(crypto STATIC "" ${SOURCES})

IF(${CMAKE_CURRENT_SOURCE_DIR} STREQUAL ${CMAKE_SOURCE_DIR})
    INSTALL_PLATFORM_LIBRARY(crypto ${HEADERS})
    INCLUDE(ebs/lib-doc)
ENDIF()
